fix double scrollbar issue

--- a/public/grpc-viewer.css
+++ b/public/grpc-viewer.css
@@ -56,7 +56,6 @@ a {
   grid-template-columns: auto auto 1fr;
   cursor: pointer;
   white-space: nowrap;
-  overflow-y: auto;
   flex-grow: 1;
   min-height: 100%;
   align-content: start;
